# sawja

./: .gitignore  .merlin  CHANGELOG  Makefile  Makefile.config.example  configure.sh  intro.ocamldoc  sawja.opam
buddycaml/: META  Makefile  README  buddy.ml  buddy_stubs.c  patch
doc/: Makefile  aboutversion.html  demonstration.html  documentation.html  history.html  install.html  intro.html
doc/tutorial/: Makefile  header.html  header.md  header.tex  sawja-tut.html  sawja_tutorial.md  sawja_tutorial.tex  tutorial.ml
jvmti/: CallsTracer.c  Makefile  NativeStubsGen.ml  NativeStubsGen.mli
jvmti/heap_inspector/: HeapInspector.c  Makefile  README  README.md  grammar
jvmti/trace_native/: Makefile  NativeStubsGen.annot  NativeStubsGen.ml  callstrace.jvmti
opam/: opam  url
runtime/sawja/: Assertions.java
src/: BDDSet.ml  META  META.source  Makefile  XTA.ml  XTA.mli  a3Bir.ml  a3Bir.mli  a3BirPP.ml  a3BirPP.mli  a3BirSSA.ml  a3BirSSA.mli  a3BirSSAPP.ml  a3BirSSAPP.mli  argPlugin.ml  argPlugin.mli  bBir.ml  bBir.mli  bc2bir.ml  bc2bir.mli  benchVars.ml  bir.ml  bir.mli  birA3.ml  cfaBir.ml  cfaBir.mli  classDomain.mli  classDomainBDD.ml  classDomainPtrees.ml  cmn.ml  cmn.mli  dllist.ml  dllist.mli  fBir.ml  fBir.mli  iter.ml  iter.mli  iter2.ml  iter2.mli  jBir.ml  (+65 more)
src/dataflow_analyses/: .depend  Makefile  README  availableExpr.ml  availableExpr.mli  availableExprSSA.ml  iter.ml  (+12 more)
test/: .merlin  Makefile  README.md  sawjap.ml
tutorial/: Makefile  header.html  header.tex  jaws_tutorial.md  jaws_tutorial.rst  sawja-tut.html  sawja_tutorial.md  style-tut.css
(+9 files in other folders)
