opam-version: "2.0"
maintainer: "sawja@inria.fr"
build: [
  ["./configure.sh"]
  [make]
]
remove: [
  ["ocamlfind" "remove" "sawja"]
]
bug-reports: "sawja@inria.fr"
authors: "Sawja development team"
install: [
  [make "install"]
]
homepage: "http://sawja.inria.fr"
dev-repo: "git+https://github.com/javalib-team/sawja.git"
depends: [
  "ocaml" {>= "4.02"}
  "ocamlfind" {build}
  "javalib" {>= "3.2.1" & < "3.3"}
]

synopsis: "Sawja provides a high level representation of Java bytecode programs and static analysis tools"

description: """
Sawja is a library written in OCaml, relying on Javalib to provide a high level representation of Java bytecode programs. Its name stands for Static Analysis Workshop for JAva. Whereas Javalib is dedicated to isolated classes, Sawja handles bytecode programs with their class hierarchy and control flow algorithms.
Moreover, Sawja provides some stackless intermediate representations of code, called JBir and A3Bir. The transformation algorithm, common to these representations, has been formalized and proved to be semantics-preserving.
"""
